--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -229,13 +229,13 @@
         let favoritesDiv = $("#favoriteSongs");
         favoritesDiv.html("");
         for (let song of data) {
-          let songDiv = `<a id="${song.id}" class="favSong" title="Click to see song details">
+          let songDiv = `<a id="fav_${song.id}" class="favSong" title="Click to see song details">
             <h3 class="favTitle" style="display: inline-block;">${song.name}</h3>
             <p class="favP">${song.artistName}</p>
           </a>
           `;
           favoritesDiv.append(songDiv);
-          $("#favoriteSongs").on("click",`#${song.id}`,function () {
+          $("#favoriteSongs").on("click", `#fav_${song.id}`, function () {
             showSongPopup(song.id, song.name, 'remove')
           })
         }
@@ -593,7 +593,8 @@
           return;
         }
         this.querySelector(".fa-heart-o").style.color = "red"
-        ajaxCall("POST", baseApiOfek + `/Users/${JSON.parse(localStorage.user).id}/${this.id}`, "", successCBAddToFavorite, errorCB);
+        let songId = this.id.split("_")[1]
+        ajaxCall("POST", baseApiOfek + `/Users/${JSON.parse(localStorage.user).id}/${songId}`, "", successCBAddToFavorite, errorCB);
       })
 
     })
@@ -729,27 +730,27 @@
       let titleText;
       let style;
       let req;
-      let successFunc;
+
 
       if (favorite === "add") {
         className = "addToFavorites";
         titleText = "Add to Favorites";
         style = "color: white;";
         req = "POST";
-        successFunc = successCBAddToFavorite;
+        // successFunc = successCBAddToFavorite;
       }
       else {
         className = "removeFromFavorites";
         titleText = "Remove from Favorites";
         style = "color: red;";
         req = "DELETE";
-        successFunc = successCBRemoveFromFavorite;
+        // suckcessFunc = successCBRemoveFromFavorite;
       }
       Swal.fire({
         title: `${data.name} Lyrics`,
         html: `<div class="song-popup">${data.lyrics.replace(/\n/g, '<br>')}</div>
                <br>
-               <i class="fa fa-heart-o ${className}" title="${titleText}" style="${style}"></i>`,
+               <i id="song_${data.id}" class="fa fa-heart-o ${className}" title="${titleText}" style="${style}"></i>`,
         color: 'white',
         background: '#171717',
         confirmButtonText: "Close",
@@ -757,7 +758,7 @@
           // Initialize the scrollable section
           $('.song-popup').scrollTop(0);
           // Add event listener to the "Add to Favorites" button
-          $(`.${className}`).click(function () {
+          $(`#song_${data.id}`).click(function () {
             if (localStorage.user === undefined) {
               Swal.fire({
                 icon: 'error',
@@ -767,7 +768,11 @@
               })
               return;
             }
-            ajaxCall(req, baseApiOfek + `/Users/${JSON.parse(localStorage.user).id}/${data.id}`, "", successFunc, errorCB);
+            if (favorite === "add")
+              ajaxCall("POST", baseApiOfek + `/Users/${JSON.parse(localStorage.user).id}/${data.id}`, "", successCBAddToFavorite, errorCB);
+            else
+              ajaxCall("DELETE", baseApiOfek + `/Users/${JSON.parse(localStorage.user).id}/${data.id}`, "", successCBRemoveFromFavorite, errorCB);
+
           });
         }
       });
@@ -855,7 +860,7 @@
       let songsCards = document.querySelectorAll(".randSongs");
       let ids = [];
       for (let i = 0; i < 3; i++) {
-        songsCards[i].id = data[i].id;
+        songsCards[i].id = "rand_" + data[i].id;
         songsCards[i].querySelector(".randTitle").innerHTML = data[i].name;
         songsCards[i].querySelector(".randPara").innerHTML = data[i].artistName;
         ids.push(data[i].id);
