main image size

--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -527,7 +527,7 @@
                   <br>
                   <span id="notMember">Not a Member? </span><button id="signUpLink" class="cta notMember"><u>Sign Up
                       Now</u></button>
-                  <img src="assets/img/mainImage.png" alt="Welcome">
+                  <img id="mainImage" src="assets/img/mainImage.png" alt="Welcome">
                 </div>
                 <div class="intro--options">
                   <a class="randSongs" title="click to add to your favorite">
