--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -491,7 +491,7 @@
           <header class="header">
             <a class="header--logo" href="./index.html">
               <img src="assets/img/logo.png" alt="Global">
-              <p>SongsHive</p>
+              <p id="logoHeader">SongsHive</p>
             </a>
             <button class="header--cta cta">Hello Ofek</button>
             <div class="header--nav-toggle">
