--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -229,7 +229,7 @@
           if (!randNums.includes(r)) randNums.push(r);
         }
         $("#Quiz").html(
-          `<p id="playerScore">Score: ${score} Time left: &nbsp</p>
+          `<span id="playerScore">Score: ${score} Time left: &nbsp</span>
           <span id="timer">30</span>
         <div id="question">
                   <h3 style="display: inline-block;">${qArr[0]}</h3>
